--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-route": "^1.4.7",
     "bootstrap": "^3.3.5",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
